Fixed spacing issue

--- a/assets/flagship/scss/partials/_comments.scss
+++ b/assets/flagship/scss/partials/_comments.scss
@@ -236,10 +236,6 @@
 
 .comment-respond {
 
-	p:last-of-type {
-		margin: 0;
-	}
-
 	label {
 		display: block;
 	}
